--- a/dbd-soft/src/ejs/preloader.ejs
+++ b/dbd-soft/src/ejs/preloader.ejs
@@ -34,8 +34,8 @@ let userTag = '<%-req.session.user.tag%>';
 <script src="https://cdn.jsdelivr.net/npm/jquery.skeleton.loader@1.2.0/dist/jquery.scheletrone.min.js"></script>
 <link href="/css/nucleo-svg.css" rel="stylesheet" />
 <!-- CSS Files -->
-<%if(now == 'manage'){%><link href="https://plaindevelopment.github.io/adn/dbd-soft-ui/css/guild.css" rel="stylesheet" /><%}%>
-<link id="pagestyle" href="https://plaindevelopment.github.io/adn/dbd-soft-ui/css/soft-ui-dashboard.css" rel="stylesheet" />
+<%if(now == 'manage'){%><link href="https://adn.siondevelopment.xyz/dbd-soft/src/css/guild.css" rel="stylesheet" /><%}%>
+<link id="pagestyle" href="https://adn.siondevelopment.xyz/dbd-soft/src/css/soft-ui-dashboard.css" rel="stylesheet" />
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
 <link href="/css/jquery-ui.css" rel="stylesheet" />
 <%- include('colorscheme.ejs') %>
@@ -111,14 +111,14 @@ let userTag = '<%-req.session.user.tag%>';
     if(!selectedTheme) {
       var link = document.createElement('link');
       link.setAttribute('rel', 'stylesheet');
-      link.setAttribute('href', 'https://plaindevelopment.github.io/adn/dbd-soft-ui/css/darkMode.css');
+      link.setAttribute('href', 'https://adn.siondevelopment.xyz/dbd-soft/src/css/darkMode.css');
       link.setAttribute('id', 'darkTheme');
       document.head.appendChild(link);
       document.cookie = "selectedTheme=dark; expires=Thu, 01 Dec 2022 00:00:00 UTC; path=/;";
     } else if(selectedTheme !== "light") {
       var link = document.createElement('link');
       link.setAttribute('rel', 'stylesheet');
-      link.setAttribute('href', 'https://plaindevelopment.github.io/adn/dbd-soft-ui/css/darkMode.css');
+      link.setAttribute('href', 'https://adn.siondevelopment.xyz/dbd-soft/src/css/darkMode.css');
       link.setAttribute('id', 'darkTheme');
       document.head.appendChild(link);
       document.cookie = "selectedTheme=dark; expires=Thu, 01 Dec 2022 00:00:00 UTC; path=/;";
@@ -128,7 +128,7 @@ let userTag = '<%-req.session.user.tag%>';
 
     var link = document.createElement('link');
     link.setAttribute('rel', 'stylesheet');
-    link.setAttribute('href', 'https://plaindevelopment.github.io/adn/dbd-soft-ui/css/darkMode.css');
+    link.setAttribute('href', 'https://adn.siondevelopment.xyz/dbd-soft/src/css/darkMode.css');
     link.setAttribute('id', 'darkTheme');
     document.head.appendChild(link);
   }
