--- a/dbd-soft/src/ejs/theme.ejs
+++ b/dbd-soft/src/ejs/theme.ejs
@@ -39,7 +39,7 @@
     if(theme === "dark" && !elementExists) {
       var link = document.createElement('link');
       link.setAttribute('rel', 'stylesheet');
-      link.setAttribute('href', 'https://plaindevelopment.github.io/cdn/dbd-soft-ui/css/darkMode.css');
+      link.setAttribute('href', 'https://adn.siondevelopment.xyz/dbd-soft/src/css/darkMode.css');
       link.setAttribute('id', 'darkTheme');
       document.head.appendChild(link);
       document.cookie = "selectedTheme=dark; expires=Thu, 01 Dec 2022 00:00:00 UTC; path=/;";
