--- a/dbd-soft/src/ejs/preloader.ejs
+++ b/dbd-soft/src/ejs/preloader.ejs
@@ -111,6 +111,7 @@ if(now == 'error') currentPage = "Error";
     }
     Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
   }
+  <% if(now !== "maintenance") { %>
   const selectedTheme = getCookie("selectedTheme");
   if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
     // device has dark mode enabled
@@ -138,6 +139,7 @@ if(now == 'error') currentPage = "Error";
     link.setAttribute('id', 'darkTheme');
     document.head.appendChild(link);
   }
+  <% } %>
   function getCookie(cname) {
   let name = cname + "=";
   let decodedCookie = decodeURIComponent(document.cookie);
