Added credits to current page

--- a/dbd-soft/src/ejs/preloader.ejs
+++ b/dbd-soft/src/ejs/preloader.ejs
@@ -5,6 +5,7 @@ if(now == 'commands') currentPage = "Commands";
 if(now == 'pp') currentPage = "Privacy Policy";
 if(now == 'admin') currentPage = "Admin Panel";
 if(now == 'error') currentPage = "Error";
+if(now == 'credits') currentPage = "Credits";
 %>
 
 <meta charset="utf-8" />
