Added a custom color css var

--- a/dbd-soft/src/ejs/colorscheme.ejs
+++ b/dbd-soft/src/ejs/colorscheme.ejs
@@ -105,4 +105,8 @@ let coltwo;
     .input-group .form-control:focus {
         border-color: <%-colone%> !important;
     }
+
+    .themecol {
+        color: <%-colone%> !important;
+    }
 </style>
