--- a/dbd-soft/src/ejs/preloader.ejs
+++ b/dbd-soft/src/ejs/preloader.ejs
@@ -1,11 +1,15 @@
 <%
-if(now == 'index') currentPage = "Dashboard";
-if(now == 'manage') currentPage = "Manage Guilds";
-if(now == 'commands') currentPage = "Commands";
-if(now == 'pp') currentPage = "Privacy Policy";
-if(now == 'admin') currentPage = "Admin Panel";
-if(now == 'error') currentPage = "Error";
-if(now == 'credits') currentPage = "Credits";
+let currentPage = "Dashboard";
+if(now) {
+  if(now === 'manage') currentPage = "Manage Guilds";
+  if(now === 'commands') currentPage = "Commands";
+  if(now === 'pp') currentPage = "Privacy Policy";
+  if(now === 'admin') currentPage = "Admin Panel";
+  if(now === 'error') currentPage = "Error";
+  if(now === 'credits') currentPage = "Credits";
+  if(now === 'debug') currentPage = "Debug";
+  if(now === 'maintenance') currentPage = "Under Maintenance";
+}
 %>
 
 <meta charset="utf-8" />
