--- a/dbd-soft/src/ejs/preloader.ejs
+++ b/dbd-soft/src/ejs/preloader.ejs
@@ -173,4 +173,4 @@ function sweetalert(icons, text, timer){
 <script src="assets/node_modules/bootstrap/js/bootstrap.min.js"></script>
 <script src="/js/plugins/chartjs.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<%- include('theme.ejs') %>
+<% if(now !== "maintenance" && now !== "error") %><%- include('theme.ejs') %><%}%>
