--- a/dbd-soft/src/ejs/colorscheme.ejs
+++ b/dbd-soft/src/ejs/colorscheme.ejs
@@ -109,4 +109,8 @@ let coltwo;
     .themecol {
         color: <%-colone%> !important;
     }
+    .input-group .form-control:focus {
+        border-left-color: <%-colone%> !important;
+        border-right-color: <%-colone%> !important;
+    }
 </style>
