--- a/dbd-soft/src/ejs/preloader.ejs
+++ b/dbd-soft/src/ejs/preloader.ejs
@@ -35,6 +35,7 @@ if(now) {
 <link href="/css/jquery-ui.css" rel="stylesheet" />
 <%- include('colorscheme.ejs') %>
 <% if(now == "maintenance") { %>
+  <link id="pagestyle" href="/css/soft-design-system.css" rel="stylesheet" />
   <style>
     .blur.blur-rounded {
       border-radius: 17px;
