Added theme color to meta tag

--- a/dbd-soft/src/ejs/colorscheme.ejs
+++ b/dbd-soft/src/ejs/colorscheme.ejs
@@ -37,6 +37,7 @@ let coltwo;
 
 
 %>
+<meta name="theme-color" content="<%-colone%>">
 <style>
     .bg-gradient-primary {
         background-image: linear-gradient(<%-currentCode%>);
