--- a/dbd-soft/src/css/soft-ui-dashboard.css
+++ b/dbd-soft/src/css/soft-ui-dashboard.css
@@ -51,6 +51,13 @@
   display: block;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12)!important;
 }
+.swal2-title {
+  color: white !important;
+  font-size: large !important;
+  font-weight: 400 !important;
+  margin-left: 5px !important;
+}
+
 .feed-code {
   font-size: 15px;
   border-left: 4px solid #04AA6D;
