Added card mask to colourscheme

--- a/dbd-soft/src/ejs/colorscheme.ejs
+++ b/dbd-soft/src/ejs/colorscheme.ejs
@@ -73,6 +73,12 @@ let coltwo;
         border-radius: 0.125em;
         background-color: <%-colone%> !important;
     }
+
+    .card.card-background.card-background-mask-info:after {
+        background-image: linear-gradient(<%-currentCode%>) !important;
+        opacity: .85;
+    }
+
     .bg-gradient-primary {
         background-image: linear-gradient(<%-currentCode%>);
     }
