--- a/dbd-soft/src/ejs/footer.ejs
+++ b/dbd-soft/src/ejs/footer.ejs
@@ -7,7 +7,7 @@
             document.write(new Date().getFullYear())
           </script>,
           Made with <i class="fa fa-heart"></i> by
-          <a href="https://github.com/plaindevelopment" class="font-weight-bold" target="_blank">PlainDevelopment</a> and <a href="https://github.com/iMidnights" class="font-weight-bold" target="_blank">iMidnight</a>
+          <a href="/credit" class="font-weight-bold" target="_blank">PlainDevelopment</a> and <a href="/credit" class="font-weight-bold" target="_blank">iMidnight</a>
         </div>
       </div>
     </div>
